<resources>
    <string name="app_name">ExpenseManagementApplication</string>
    <string name="OR">OR</string>
    <string name="enterEmailOrPhoneNo">Enter Email</string>
    <string name="enterPassword">Enter Password</string>
    <string name="logIn">Log In</string>
    <string name="signUp">Sign Up</string>
    <string name="notAUser">Not A User ?</string>

    <string-array name="tripTypes" size="20dp">
        <item>Meeting</item>
        <item>Conference</item>
        <item>Seminar</item>
        <item>Workshop</item>
        <item>Others</item>
    </string-array>

    <string-array name="expenseTypes" size="20dp">
        <item>Food</item>
        <item>Accommodation</item>
        <item>Travel</item>
        <item>Others</item>
    </string-array>

    <string-array name="expenseCurrency" size="20dp">
        <item>GBP</item>
        <item>INR</item>
        <item>EUR</item>
        <item>CAD</item>
        <item>USD</item>
        <item>AUD</item>
    </string-array>

</resources>

